dev/non_executable_reasons_record_from_random_10k/4612.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
docker run -p 8888:8888 --name tensorflow-udacity -it gcr.io/tensorflow/udacity-assignments:1.0.0
------------------

[0;36m  File [0;32m"<ipython-input-1-2908301088a2>"[0;36m, line [0;32m3[0m
[0;31m    docker run -p 8888:8888 --name tensorflow-udacity -it gcr.io/tensorflow/udacity-assignments:1.0.0[0m
[0m             ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-2908301088a2>, line 3)

Executability                            : False
